--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -1,14 +1,17 @@
 <p style="color: green"><%= notice %></p>
 
+<%= form_with model: @link, :method => "get" do |f| %>
+  <%= f.text_field :url %>
+  <%= f.text_field :slug %>
+  <%= f.submit "generate shortened Link" %>
+<% end %>
+
 <h1>Links</h1>
 
 <div id="links">
   <% @links.each do |link| %>
     <%= render link %>
-    <p>
-      <%= link_to "Show this link", link %>
-    </p>
   <% end %>
 </div>
 
-<%= link_to "New link", new_link_path %>
+
