--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -1,6 +1,6 @@
 <p style="color: green"><%= notice %></p>
 
-<%= form_with model: @link, :method => "get" do |f| %>
+<%= form_with model: @link, :method => "post" do |f| %>
   <%= f.text_field :url %>
   <%= f.text_field :slug %>
   <%= f.submit "generate shortened Link" %>
@@ -10,7 +10,7 @@
 
 <div id="links">
   <% @links.each do |link| %>
-    <%= render link %>
+    <p><%= link.url %> -> <%= link_to link.short_link, link.url, target: "_blank" %></p>
   <% end %>
 </div>
 
