--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -1,28 +1,37 @@
-<p style="color: green"><%= notice %></p>
-<% if flash[:alert] %> 
-  <p style="color: red"><%= alert %></p>
-<% end %>
+<div class="columns is-centered is-vcentered">
+  <div class="column is-two-thirds ">
+    <section id='form' class='section is-flex is-justify-content-center'>
+        <p style="color: green"><%= notice %></p>
+        <% if flash[:alert] %> j
+          <p style="color: red"><%= alert %></p>
+        <% end %>
 
+        <%= form_with model: @link, :method => "post" do |f| %>
+          <div class="field is-grouped">
+            <div class="control">
+              <%= f.text_field :url %>
+            </div>
+            <div class="control">
+              <%= f.text_field :slug %>
+              <p class="error"><%= show_errors(@link, :slug) %></p>
+            </div>
+            <%= f.submit "generate shortened Link", class: "button is-info" %>
+          </div>
+        <% end %>
+      </div>
+    </section>
+  </div>
 
-<%= form_with model: @link, :method => "post" do |f| %>
-  <%= f.text_field :url %>
-  <%= f.text_field :slug %>
-  <% if @link.errors.any? %>
-    <ul>
-      <% @link.errors.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-    </ul>
-  <% end %>
-  <%= f.submit "generate shortened Link" %>
-<% end %>
+  <div class="columns is-centered">
+    <div class="column is-two-thirds ">
+      <section id="links" class="section is-flex is-justify-content-center">
+        <div id="links">
+          <% @links.each do |link| %>
+            <p><%= link.url %> -> <%= link_to link.short_link, link.url, target: "_blank" %></p>
+          <% end %>
+        </div>
+      </section>
+    </div>
+  </div>
 
-<h1>Links</h1>
-
-<div id="links">
-  <% @links.each do |link| %>
-    <p><%= link.url %> -> <%= link_to link.short_link, link.url, target: "_blank" %></p>
-  <% end %>
 </div>
-
-
